@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021 Airbyte, Inc., all rights reserved.
+ * Copyright (c) 2022 Airbyte, Inc., all rights reserved.
  */
 
 package io.airbyte.oauth.flows;
@@ -37,7 +37,7 @@ public class IntercomOAuthFlowIntegrationTest extends OAuthFlowIntegrationTest {
   }
 
   @Override
-  protected OAuthFlowImplementation getFlowImplementation(ConfigRepository configRepository, HttpClient httpClient) {
+  protected OAuthFlowImplementation getFlowImplementation(final ConfigRepository configRepository, final HttpClient httpClient) {
     return new IntercomOAuthFlow(configRepository, httpClient);
   }
 
@@ -46,6 +46,7 @@ public class IntercomOAuthFlowIntegrationTest extends OAuthFlowIntegrationTest {
     return SERVER_LISTENING_PORT;
   }
 
+  @Override
   @BeforeEach
   public void setup() throws IOException {
     super.setup();
@@ -56,7 +57,7 @@ public class IntercomOAuthFlowIntegrationTest extends OAuthFlowIntegrationTest {
     int limit = 20;
     final UUID workspaceId = UUID.randomUUID();
     final UUID definitionId = UUID.randomUUID();
-    final String fullConfigAsString = new String(Files.readAllBytes(CREDENTIALS_PATH));
+    final String fullConfigAsString = Files.readString(CREDENTIALS_PATH);
     final JsonNode credentialsJson = Jsons.deserialize(fullConfigAsString);
     when(configRepository.listSourceOAuthParam()).thenReturn(List.of(new SourceOAuthParameter()
         .withOauthParameterId(UUID.randomUUID())
@@ -69,7 +70,7 @@ public class IntercomOAuthFlowIntegrationTest extends OAuthFlowIntegrationTest {
                     .put("client_secret", credentialsJson.get("client_secret").asText())
                     .build())))));
 
-    final String url = flow.getSourceConsentUrl(workspaceId, definitionId, REDIRECT_URL);
+    final String url = flow.getSourceConsentUrl(workspaceId, definitionId, REDIRECT_URL, Jsons.emptyObject(), null);
     LOGGER.info("Waiting for user consent at: {}", url);
 
     // TODO: To automate, start a selenium job to navigate to the Consent URL and click on allowing
